# astrocatlobby

./: CNAME  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.astrocat.json  tsconfig.json  vite.config.ts
astrocatlobby/: __init__.py  cli.py  controllers.py  models.py  services.py
astrocatlobby/game/: __init__.py  __main__.py  assets.py  client.py  engine.py  scenes.py
astrocatlobby/game/static/: game.js  index.html  styles.css
docs/: gameplay-ux-enhancement-ideas.md
public/: index.html  leaderboard-config.js
public/AstroCats3/: CNAME  README.md  index.html  manifest.webmanifest  service-worker.js
public/AstroCats3/backend/: leaderboard-function.ts
public/AstroCats3/scripts/: app.js  app.source.js
public/AstroCats3/styles/: main.css
public/scripts/: app.js
src/: asset-manifest.js  main.js  main.ts  miniGameHost.js  style.css
src/assets/: .gitkeep
src/game/: loop.js  render.js  update.js
src/runtime/: shims.js
src/services/: accounts.js  solanaLedger.js  wallet.js
src/ui/: background.js
src/ui/components/: hudModal.js  miniGameOverlay.js  walletToolbarSection.js
src/wallet/: phantom.js
tests/: accounts.test.js  background.test.js  test_assets.py  test_cli.py  test_engine.py  test_services.py  wallet.test.js
