[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocatlobby"
version = "0.1.0"
description = "Manage a roster of astronaut cats and their missions."
authors = [{ name = "Astrocat Lobby Maintainers" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
astrocatlobby = "astrocatlobby.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
